deploy (0.2-34) lenny; urgency=low

  * deploy.cfg: comment the src and dest code options
  * minor spelling fix

 -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 14 Dec 2009 10:53:10 +0100

deploy (0.2-33) lenny; urgency=low

  * create the 'packages_dir' directory

 -- Frederic Junod <frederic.junod@camptocamp.com>  Thu, 10 Dec 2009 16:18:08 +0100

deploy (0.2-32) lenny; urgency=low

  * add --delete option to rsync

 -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 08 Dec 2009 16:08:19 +0100

deploy (0.2-31) lenny; urgency=low

  * fix remote_hosts in deploy-wms.cfg

 -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 20 Oct 2009 12:12:39 +0200

deploy (0.2-30) lenny; urgency=low

  * support additional config file via 'include' in the main section
  * add a debian/conffiles
  * moved config file from /etc/deploy.cfg to /etc/deploy/deploy.cfg

 -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 13 Oct 2009 15:02:54 +0200

deploy (0.2-29) lenny; urgency=low

  * hooks/post-restore-code: set SVN_CO_OPTIONS

 -- Frederic Junod <frederic.junod@camptocamp.com>  Thu, 17 Sep 2009 12:15:16 +0200

deploy (0.2-28) lenny; urgency=low

  * fix typo in symbolic target assign.

 -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 08 Sep 2009 08:24:52 +0200

deploy (0.2-27) lenny; urgency=low

  * add comments in config file.
  * pass the symbolic target host to the hooks ($TARGET variable).
  * upper case variable names passed to the hooks.

 -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 07 Sep 2009 12:47:28 +0200

deploy (0.2-26) lenny; urgency=low

  * change packages_dir from /var/sig/deploy-archives/ to /var/cache/deploy/

 -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 31 Aug 2009 09:01:29 +0200

deploy (0.2-25) lenny; urgency=low

  * fix typo in remote_extract

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 21 Aug 2009 09:40:16 +0200

deploy (0.2-24) lenny; urgency=low
