@@ -22,6 +22,7 @@ prod = example.com, example.org
 #names = foo, bar.baz
 names = %(project)s
 psql = psql
+drop = dropdb
 dump = pg_dump -Fc
 restore = pg_restore -Fc -C -d template1
 restore_table = pg_restore -Fc --single-transaction
